change the file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ssh</title>
 </head>
 <body>
     <h1>Create by henny</h1>
+    <p>remove the text</p>
 </body>
 </html>
